# Pro0929-CLI-Unites

./: .env  .gitignore  Makefile  PR.md  README.md  learnings 2.md  main.py  notes_wrapper.py  pyproject.toml  seed.sh
cli-unites/: pyproject.toml
cli_unites/: __init__.py  cli.py  main.py
cli_unites/commands/: __init__.py  activity.py  add.py  auth.py  email.py  help.py  list.py  login 2.py  login.py  logout.py  onboarding.py  realtime.py  search.py  semantic_search.py  team.py
cli_unites/core/: __init__.py  auth 2.py  auth.py  config.py  db.py  email.py  match_notes.py  onboarding 6.py  onboarding.py  output.py
cli_unites/database/: create_client.py
cli_unites/models/: note.py
cli_unites/realtime/: __init__.py  client.py  messaging.py
cli_unites/supabase/: create_client.py  utils.py
cli_unites/templates/: error.html  success.html
cli_unites/tests/: test_activity 2.py  test_add.py  test_cli_unites.py  test_import.py  test_list.py  test_supabase.py
documents/: PR-rag.md  PR-websocket.md  PR_DESCRIPTION.md  RLS 2.md  plan.md  supabasemigration 2.md  teams-implementation.md  websockets.md
supabase/: create_client.py  seed.sql
supabase/.temp/: pooler-url  project-ref
supabase/functions/embed/: index.ts
supabase/functions/search-embed/: index.ts
supabase/migrations/: 20251004145020_test_connection_table.sql  20251006131918_vecs_utility_functions.sql  20251006131920_vecs_utility_functions.sql  20251006131921_test_connection_table.sql  20251006140000_rls_policies.sql  20251006141000_seed_test_user.sql  20251006142000_match_notes_function.sql  20251011190000_debug_match_notes.sql  20251012000000_create_messages_table.sql  20251012000001_testing_policy_messages.sql  20251012000002_enable_realtime_notes.sql  20251013000000_add_team_id_to_notes.sql  README.md  TODO_add_team_management.sql
tests/: test_add.py  test_auth.py  test_cli_unites.py  test_list.py
