[project]
name = "cli-unites"
version = "0.1"
description = "unite your team with query-able project notes"
readme = "README.md"
authors = [{name = "Anna van Wingerden, Jaz Maslen, Rich Couzens"}]
license = "Apache-2.0"
requires-python = ">=3.8"
classifiers = []
dependencies = [
    "click"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/fac-31/Pro0929-CLI-Unites"
Changelog = "https://github.com/fac-31/Pro0929-CLI-Unites/releases"
Issues = "https://github.com/fac-31/Pro0929-CLI-Unites/issues"
CI = "https://github.com/fac-31/Pro0929-CLI-Unites/actions"

[project.scripts]
cli-unites = "cli_unites.cli:cli"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["cli_unites*"]
