[project]
name = "cli-unites"
version = "0.1"
description = "unite your team with query-able project notes"
readme = "README.md"
authors = [{name = "Anna van Wingerden, Jaz Maslen, Rich Couzens"}]
license = "Apache-2.0"
requires-python = ">=3.9"
classifiers = []
dependencies = [
    "click",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.4.2",
    "python-dotenv>=1.1.1",
    "supabase>=2.20.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/annavanwingerden/cli-unites"
Changelog = "https://github.com/annavanwingerden/cli-unites/releases"
Issues = "https://github.com/annavanwingerden/cli-unites/issues"
CI = "https://github.com/annavanwingerden/cli-unites/actions"

[project.scripts]
notes = "cli_unites.cli:cli"

[project.optional-dependencies]
test = ["pytest"]
